--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>New Vintage Design - Home</title>
-        <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">        <link rel="icon" sizes="120x120" href="https://i.ibb.co/V2LVnfG/rope-access-icon-logo-2.png">
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">        
+        <link rel="icon" sizes="16x16" href="./media/favicon.jpg">
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="text/javascript" src="script.js" async></script>
     </head>
